k8s/platform/keycloak/manifests/01-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    name: keycloak
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: identity-provider
